refactor: address PR #50 review comments
- NdpiService: merge enrichWithAppNames + enrichWithRisks into a single
  enrich() method so ndpiReader runs exactly once per analysis
- AnalysisService: call ndpiService.enrich() instead of two separate
  methods; add null guard on flowRisks in getSecurityAlerts()
- Extract parseDateTime into shared frontend util (src/utils/dateUtils.ts)
  and import it in both conversationService and securityService

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>